추가 가로등 고장상태에 따라 색상이 다르게 전시, 일정 줌레벨이 되어야 가로등 마커 전시 안되는거 ButtonOfCurrent로 생성된 마커 삭제 안됨, 가로등 마커 클릭 시 사용자의 가시성을 높이기 위해 마커 커지는 기능추가해야함

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,6 @@ dependencies {
     // For example, add the dependencies for Firebase Authentication and Cloud Firestore
     implementation("com.google.firebase:firebase-auth")
     implementation("com.google.firebase:firebase-firestore")
+
+    implementation 'com.google.maps.android:android-maps-utils:2.2.0'
 }
